Fix styling of search input on mobile Safari

--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -96,6 +96,8 @@
 @include variables.breakpoint('sm') {
   .logo {
     gap: 15px;
+    grid-template-areas: 'svg site-name';
+    grid-template-columns: auto;
   }
 
   .logo__site-name {
