--- a/src/components/Layout/SearchBar.module.scss
+++ b/src/components/Layout/SearchBar.module.scss
@@ -50,9 +50,7 @@
 }
 
 .input {
-  /* stylelint-disable */
-  -webkit-appearance: none;
-  /* stylelint-enable */
+  appearance: none !important;
   border: 1px solid var(--mm-color-border);
   border-radius: var(--mm-border-radius);
   color: var(--mm-color-primary-text);
